--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 </head>
 <body>
              hello, this is first file.
-             this is another line.
+             i am expecting an error
 	     this is another file.
 </body>
 </html>
